DevOps-Projects/Project-202/tf-files/main.tf
data "aws_vpc" "selected" { # local isim "selected"
  default = true
}

data "aws_subnets" "example" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.selected.id]
  }
}

data "aws_ami" "amazon-linux-2" {
  owners      = ["amazon"]
  most_recent = true
  filter {
    name   = "name"
    values = ["amzn2-ami-hvm*"]
  }
}

resource "aws_launch_template" "asg-lt" { # iki çeşit dependancy var
  name                   = "phonebook-lt"
  image_id               = data.aws_ami.amazon-linux-2.id
  instance_type          = "t2.micro"
  key_name               = "firstkey"
  vpc_security_group_ids = [aws_security_group.server-sg.id] # implicit dependancy (önce içteki sec-gr oluşacak)
  user_data              = filebase64("user-data.sh")
  depends_on             = [github_repository_file.dbendpoint] # explicit dependancy
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "Web Server of Phonebook App"
    }
  }
}

resource "aws_alb_target_group" "app-lb-tg" {
  name        = "phonebook-lb-tg"
  port        = 80
  protocol    = "HTTP"
  vpc_id      = data.aws_vpc.selected.id
  target_type = "instance"

  health_check {
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}

resource "aws_alb" "app-lb" {
  name               = "phonebook-lb" # kendi hesabın içinde unique bir ismi olmalı load balancer ın
  ip_address_type    = "ipv4"
  internal           = false # burayı false yapmazsak tüm private alanlarda kullanıyor
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb-sg.id] # load balancer ın security group unu bağladık
  subnets            = data.aws_subnets.example.ids # birden fazla id olduğu için sonuna s takısı geldi
}

resource "aws_alb_listener" "app-listener" {
  load_balancer_arn = aws_alb.app-lb.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward" # listener'ın yönlendirme tipi > forward (default action: forward to)
    target_group_arn = aws_alb_target_group.app-lb-tg.arn
  }
}

resource "aws_autoscaling_group" "app-asg" {
  max_size                  = 3
  min_size                  = 1
  desired_capacity          = 2
  name                      = "phonebook-asg"
  health_check_grace_period = 300
  health_check_type         = "ELB"
  target_group_arns         = [aws_alb_target_group.app-lb-tg.arn]
  vpc_zone_identifier       = aws_alb.app-lb.subnets # data.aws_subnets.example.ids de yapabilirdik. Diğer yöntemi denedik
  launch_template {
    id      = aws_launch_template.asg-lt.id # dependancy'ler daha önce oluşturuluyor terraformm tarafından
    version = aws_launch_template.asg-lt.latest_version
  }
}

resource "aws_db_instance" "db-server" {
  instance_class              = "db.t2.micro"
  allocated_storage           = 20
  vpc_security_group_ids      = [aws_security_group.db-sg.id]
  allow_major_version_upgrade = false
  auto_minor_version_upgrade  = true
  backup_retention_period     = 0                  # bu örnekte yedek almayacağımız için 0 yaptık
  identifier                  = "phonebook-app-db" # instance'ın ismi
  name                        = "phonebook"        # database'in ismi
  engine                      = "mysql"
  engine_version              = "8.0.23"
  username                    = "admin" # instance
  password                    = "Oliver_1"
  monitoring_interval         = 0     # disable etmiş olduk
  multi_az                    = false # true dersek senkronize bir şekilde farklı bir AZ'de RDS oluşturuyor
  port                        = 3306
  publicly_accessible         = false # database'e başkasının ulaşmasını istemiyorum
  skip_final_snapshot         = true  # false dersek db'yi silerken snapshot alıyor
}

resource "github_repository_file" "dbendpoint" {
  content             = aws_db_instance.db-server.address # endpoint yazsaydık port ile beraber geliyor ama biz bunu istemiyoruz
  file                = "dbserver.endpoint"
  repository          = "phonebook" # repository ismi
  overwrite_on_create = true        # değişiklik yapabilmek için true
  branch              = "main"
}
